[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
git2 = "0.19.0"
auth-git2 = "0.5.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.131" }
xdg = "^2.1"
